# gallery

./: .gitignore  .npmignore  README.md  junit.xml  package.json  rx-vdom.config.ts  template.py  tsconfig.json  webpack.config.ts
.w3nest/: doc.ts  setup.py  webpm.py
.yw_pipeline/: yw_pipeline.py
assets/: contribute.md  home.md  index.md  presentations.w3nest.demo.md  presentations.w3nest.features.md  presentations.w3nest.highlights.md  presentations.w3nest.md  presentations.w3nest.motivations.md  presentations.w3nest.perspectives.md  presentations.w3nest.solution.md  presentations.w3nest.usual-clouds.md  quantum-chem.md  quantum-chem.utils.md  tdse-1d.md  vs-flow.bunny.macro-3D.md  vs-flow.bunny.macro-remesh.md  vs-flow.bunny.md  vs-flow.bunny.modules.md  vs-flow.md  vs-flow.simple-remesh.md  vs-flow.tutorials.getting-started.md  vs-flow.tutorials.macro-ws.md
backends/tdse-1d/: pyproject.toml
backends/tdse-1d/w3gallery_tdse1d/: main_docker.py  main_localhost.py
src/: auto-generated.ts
src/app/: chapters.ts  config.context.ts  config.markdown.ts  config.notebook.ts  contribute-file-contents.ts  home-page.ts  index.html  index.ts  links.json  main.ts  md-widgets.ts  models.ts  navigation.ts  on-load.ts  style.css  vsf.ts
src/app/backup/: d3-drawings.ts  welcome-screen.ts
src/app/presentations/: index.ts
src/app/sciences/: index.ts
src/app/vs-flow/: index.ts
src/app/widgets/: local-only.ts
src/chapters/cpp-notebook/: README.md  package.json
src/chapters/hello-vs-flow/: README.md  package.json
src/chapters/openalea/: README.md  package.json
(+54 files in other folders)
