[project]
name = "w3gallery_tdse1d"
version = "0.1.0"
description = "Solve the time dependant Schrodinger equation in 1D."
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115,<0.116.0",
    "uvicorn>=0.24,<0.25",
    "w3nest_client",
    "numpy==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pip-audit",
    "pylint",
    "pycodestyle",
    "pydocstyle",
    "isort",
    "black[d]",
    "mypy",
    "pdoc",
    "build",
    "twine",
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "matplotlib"
]
[build-system]
requires = [
    "setuptools>=67.7.2",
]

[tool.setuptools]
packages = ["w3gallery_tdse1d"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-locals"
]
[tool.mypy]
# ignore_missing_imports = true

[project.scripts]
run_w3gallery_tdse1d = "w3gallery_tdse1d.main_docker:main"

[w3nest]
default-port = 2010
